# Real-time-audio-signal-processing

./: Cargo.toml  LICENSE  README.md
docs/: README.md
src/: main.rs  recorder.rs  utils.rs
src/audio/: capture.rs  mod.rs  process.rs
src/leds/: control.rs  mod.rs
src/midi/: mod.rs  transcription.rs
