[package]
name = "real_time_audio_signal_processing"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"   # Pour capturer le flux audio en temps réel
midir = "0.10.0"   # Pour la gestion des événements MIDI
libpulse-binding = "2.28.1"
nix = "0.29.0"
libc = "0.2"
hound = "3.4.0"
rustfft = "6.0"
dasp = "0.11"
dasp_signal = "0.11"
aubio = "0.2.0"
rodio = "0.19.0"
chrono = "0.4"